<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PhotoCaptureExample!</string>
    <string name="app_name">Mockingbird</string>
    <string name="source_image">Source image</string>
    <string name="take_photo">Take Photo</string>
    <string name="translate">Translate</string>
    <string name="no_image">No image!</string>
    <string name="ocr_label">Extracted text:</string>
    <string name="ocr">Extract Text:</string>
	<string name="translated_label">Translated text:</string>
	<string name="select_lang">Select Language:</string>
</resources>
