<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical">	
	
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/extracted_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/select_lang"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/lang_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/select_lang" />
    </LinearLayout>
		
    <RelativeLayout android:layout_width="fill_parent"
    				android:layout_height="0dip"
    				android:layout_weight="6"
    				android:gravity="center_horizontal|center_vertical">
        
	    <TextView android:id="@+id/field"
	    		  android:layout_width="fill_parent"
	    	      android:layout_height="wrap_content"
	    	      android:text="@string/no_image"
	    	      android:gravity="center_horizontal"/>
	    
	    <ImageView android:id="@+id/image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/source_image"/>
    		   
   	</RelativeLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">	
				   
		<Button android:id="@+id/take_photo" android:background="@drawable/select_button"
				android:layout_width="fill_parent" android:layout_marginBottom="10dp"
				android:layout_height="wrap_content" android:layout_marginLeft="10dp"
				android:text="@string/take_photo" android:layout_marginRight="5dp"
				android:layout_weight="1"/>
		
		<Button android:id="@+id/ocr" android:background="@drawable/reset_button"
				android:layout_width="fill_parent" android:textColor="@color/black" android:layout_marginLeft="5dp"
				android:layout_height="wrap_content" android:layout_marginBottom="10dp" 
				android:text="@string/ocr" android:layout_marginRight="10dp"
				android:layout_weight="1" android:enabled="false"/>	
	</LinearLayout>
</LinearLayout>
