<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical">
    
    <RelativeLayout android:layout_width="fill_parent"
    				android:layout_height="0dip"
    				android:layout_weight="6"
    				android:gravity="center_horizontal">
    
        <TextView
	        android:id="@+id/ocr_text_label" android:layout_width="fill_parent" android:text="@string/ocr_label"
	        android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp" android:textSize="20dp" android:textStyle="bold"/>
        
        <EditText android:id="@+id/ocr_text" android:inputType="textMultiLine" android:layout_below="@+id/ocr_text_label"
			android:layout_width="fill_parent" android:layout_height="180dp" android:maxLength="1000" android:textColor="@color/black"
			android:text="" android:textSize="22dp" android:layout_marginLeft="10dp" android:layout_marginTop="10dp">
		</EditText>
		
        <!--
		
        <TextView
	        android:id="@+id/translated_text_label" android:layout_width="fill_parent" android:text="@string/translated_label"
	        android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_marginLeft="10dp" 
	        android:layout_below="@+id/ocr_text" android:layout_marginTop="10dp" android:textSize="20dp" android:textStyle="bold"/>
	     -->
	    
		<LinearLayout android:id="@+id/translated_lable"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" android:layout_below="@+id/ocr_text">
	
	        <TextView
	            android:id="@+id/translated_text_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/translated_label" android:textStyle="bold"
	            android:layout_marginLeft="5dp"
	            android:layout_marginTop="5dp"
	            android:textSize="18dp" />
	
	        <Spinner
	            android:id="@+id/translated_lang_spinner"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginTop="5dp"
	            android:drawSelectorOnTop="true"
	            android:prompt="@string/select_lang" />
	    </LinearLayout> 
	    
		<EditText android:id="@+id/translated_text" android:inputType="textMultiLine" android:layout_below="@+id/translated_lable"
			android:layout_width="fill_parent" android:layout_height="170dp" android:maxLength="1000" android:textColor="@color/black"
			android:text="" android:textSize="22dp" android:layout_marginLeft="10dp" android:layout_marginTop="5dp"
			android:enabled="false">
		</EditText>	
	    	   
   	</RelativeLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">	
				   
		<Button android:id="@+id/take_photo" android:background="@drawable/select_button"
				android:layout_width="fill_parent" android:layout_marginBottom="10dp"
				android:layout_height="wrap_content" android:layout_marginLeft="10dp"
				android:text="@string/take_photo" android:layout_marginRight="5dp"
				android:layout_weight="1"/>
		
		<Button android:id="@+id/translate" android:background="@drawable/reset_button"
				android:layout_width="fill_parent" android:textColor="@color/black" android:layout_marginLeft="5dp"
				android:layout_height="wrap_content" android:layout_marginBottom="10dp" 
				android:text="@string/translate" android:layout_marginRight="10dp"
				android:layout_weight="1"/>	
	</LinearLayout>
</LinearLayout>
